--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
  - docker
 
 before_install:
- - docker build -f Dockerfile.dev -t omiGit/docker-react .
+ - docker build -t omiGit/docker-react -f Dockerfile.dev  .
 
 script: 
  - docker run omiGit/docker-react npm run test -- --coverage
