--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
  - docker build -t omiGit/docker-react -f Dockerfile.dev .
 
 script: 
- - docker run omiGit/docker-react npm run test -- --coverage
+ - docker run omigit/docker-react npm run test -- --coverage
