--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
  - docker
 
 before_install:
- - docker build -t omiGit/docker-react -f Dockerfile.dev .
+ - docker build -t omigit/docker-react -f Dockerfile.dev .
 
 script: 
  - docker run omigit/docker-react npm run test -- --coverage
