--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
  - docker build -t omigit/docker-react -f Dockerfile.dev .
 
 script: 
- - docker run omigit/docker-react npm run test -- --coverage
+ - docker run -e CI=true omigit/docker-react npm run test -- --coverage
 
 
 
